# haskellTemplate

./: ChangeLog.md  haskelltemplate.cabal
src/: Main.hs  Maths.hs
tests/: RunTests.hs  TestMaths.hs
