name: haskelltemplate
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
synopsis: a template project i made for working in haskell
author: Adam Matthews
extra-source-files:
    ChangeLog.md

executable haskelltemplate
    main-is: Main.hs
    build-depends:
        base >=4.9 && <4.10
    default-language: Haskell2010
    hs-source-dirs: src

test-suite tests
    type: exitcode-stdio-1.0
    main-is: RunTests.hs
    build-depends:
        base >=4.9 && <4.10,
        HUnit
    default-language: Haskell2010
    hs-source-dirs: tests src
